Makefile: fix dependencies for example.tex
example.tex depends on .sty and .bib files

--- a/example/Makefile
+++ b/example/Makefile
@@ -7,6 +7,9 @@
 
 CONVERT_GRAYSCALE_CMD = gs -sDEVICE=pdfwrite -sColorConversionStrategy=Gray -dProcessColorModel=/DeviceGray -dCompatibilityLevel=1.4 -dNOPAUSE -dAutoRotatePages=/None -dBATCH
 LATEXFILES = example.tex
+THEMEFILE = beamerthemeWelitsch.sty
+IMAGEFILES = welitsch_coat_of_arms.pdf
+BIBLIOGRAPHYFILE = literature.bib
 PDFOUTPUT = $(LATEXFILES:.tex=.pdf)
 PDFOUTPUT_GRAYSCALE = $(PDFOUTPUT:.pdf=.bw.pdf)
 ALLPDFOUTPUT = $(PDFOUTPUT) $(PDFOUTPUT_GRAYSCALE)
@@ -20,6 +23,8 @@ all: $(PDFOUTPUT) $(PDFOUTPUT_GRAYSCALE)
 	bibtex $(<:tex=aux)
 	pdflatex $<
 	pdflatex $<
+
+example.pdf: $(@:.pdf=.tex) $(THEMEFILE) $(BIBLIOGRAPHYFILE) $(IMAGEFILES)
 
 %.bw.pdf: %.pdf
 	$(CONVERT_GRAYSCALE_CMD) -sOutputFile=$@ $<
